--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, user-scalable=no" />
     <link id="-gd-engine-icon" rel="icon" type="image/png" href="favicon.png" />
     <title></title>
+    <meta property="og:title" content="Survey with 29 r/Polls questions" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://wandompewlin.github.io/rPolls202008Top29/"
+    />
+    <meta
+      property="og:image"
+      content="https://wandompewlin.github.io/rPolls202008Top29/preview.png"
+    />
     <style type="text/css">
       body {
         touch-action: none;
